[package]
name = "knil"
version = "0.1.0"
authors = ["whoastonic <kingstonicthe1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "basic"
path = "tests/basic.rs"

[features]
default = ["timestamp", "colors"]

env-loader = ["dotenv"]
colors = ["colored"]
timestamp = ["chrono"]

[dependencies]
log = { version = "0.4", features = ["std"] }

[dependencies.chrono]
version = "0.4.15"
optional = true

[dependencies.colored]
version = "2"
optional = true

[dependencies.dotenv]
version = "0.15"
optional = true
