[package]
name = "knil"
version = "0.1.0"
authors = ["whoastonic <kingstonicthe1@gmail.com>"]
description = "A simple logger for my cases, others can use though."
include = [
	"src/*.rs",
	"Cargo.toml",
]
repository = "https://github.com/whoastonic/knil.git"
documentation = "https://docs.rs/knil"
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "basic"
path = "tests/basic.rs"

[features]
default = ["timestamp", "colors"]

file-log = []
colors = ["colored"]
timestamp = ["chrono"]
envload = ["dotenv"]

[dependencies]
log = { version = "0.4", features = ["std"] }

[dependencies.chrono]
version = "0.4.15"
optional = true

[dependencies.colored]
version = "2"
optional = true

[dependencies.dotenv]
version = "0.15"
optional = true
