[package]
name = "knil"
license = "MIT"
edition = "2018"
version = "0.1.3"
readme = "README.md"
authors = ["whoastonic <kingstonicthe1@gmail.com>"]
description = "An environment based logger, built with simplicity in mind."
include = [
	"src/*.rs",
	"Cargo.toml",
]
documentation = "https://docs.rs/knil"
repository = "https://github.com/whoastonic/knil.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["colors", "stamps"]

stamps = ["chrono"]
colors = ["colored"]
loadenv = []

[dependencies]
dotenv = { version = "^0.15" }
colored = { version = "^2", optional = true }
chrono = { version = "^0.4", optional = true }

[dependencies.log]
version = "^0.4"
features = ["std"]
